--- a/public/images/styles.css
+++ b/public/images/styles.css
@@ -148,11 +148,14 @@
      
     }
     .formulario4{
-      font-family: 'Khand', sans-serif;   
-      padding: 30px;
-      width: 500px;
+      font-family: 'Khand', sans-serif; 
+      padding-top : 30px; 
+      padding-bottom : 30px;   
+      padding-left: 5px;
+      padding-right: 5px;
+      width: 375px;
       height: 800px;
-      border: 5px solid rgb(255, 255, 255);
+      border: 2px solid rgb(255, 255, 255);
       border-radius: 20px;
       background-color: rgb(52, 58, 60);
       color: #efefef;
@@ -170,7 +173,7 @@
      
     }
     .tabla{
-      padding: 50px;
+      padding-top: 10px;
       font-family: 'Khand', sans-serif;   
 
     }
